Fixed loading logo on mobile

--- a/styles.css
+++ b/styles.css
@@ -270,38 +270,12 @@
             border-radius: 50px;
         }
         
+        .mobile .toggleButton.loading {
+            padding: 0;
+        }
+        
         .mobile .tableOfContents {
             margin: 0 auto;
-        }
-        
-        .mobile .studyGuideDropdown .loader {
-            border: 3px solid #f3f3f3;
-            /* Light grey */
-            border-top: 3px solid #3498db;
-            /* Blue */
-            border-radius: 50%;
-            width: 25px;
-            height: 25px;
-            animation: spin 1.4s linear infinite;
-        }
-        
-        .mobile .loader {
-            border: 6px solid #f3f3f3;
-            /* Light grey */
-            border-top: 6px solid #3498db;
-            /* Blue */
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-        }
-        
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
         }
         
         .important {
